syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mimos.wallet.base.rpc.response";
option java_outer_classname = "RpcResponse";

package MimosWallet;

message BaseGrpcResponse {

    int32 code = 1;

    string message = 2;

    int32 effect_count = 3;


    int64 savedId = 4;

}